create basic ui-routes and states

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,6 +18,4 @@
 //= require vendor/angular-resource
 //= require vendor/angular-ui-router
 
-//= require_tree ./app
-
-window.App = angular.module('myApp', ['ngResource', 'ui.route'])
+//= require ./app/main
