--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,9 @@
     <title>RailsAngularjsUiRoutes</title>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <%= yield %>
-
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  </head>
+  <body ng-app="myApp">
+    <%= yield %>
   </body>
 </html>
